<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <item
        android:id="@+id/navigation_color"
        android:icon="@drawable/tab_color2"
        android:title="@string/color_pick"
        android:padding= "0dp"/>
    <item
        android:id="@+id/navigation_pattern"
        android:icon="@drawable/tab_func2"
        android:title="@string/ble_pattern"
        android:padding = "0dp"/>

    <item
        android:id="@+id/navigation_custom"
        android:icon="@drawable/navigation_custom_icon"
        android:title="@string/ble_custom"
        android:padding = "0dp"/>

    <item
        android:id="@+id/navigation_sync"
        android:icon="@drawable/tab_mic2"
        android:title="@string/ble_sync"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding = "0dp"/>
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/tab_webcam2"
        android:title="@string/ble_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding = "0dp"/>

</menu>
